// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds repost views fetches reposted-by for a post 1`] = `
Array [
  Object {
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(0)",
    "handle": "eve.test",
    "viewer": Object {},
  },
  Object {
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(1)",
    "handle": "dan.test",
    "viewer": Object {
      "following": "record(0)",
    },
  },
  Object {
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(2)",
    "handle": "carol.test",
    "viewer": Object {
      "followedBy": "record(2)",
      "following": "record(1)",
    },
  },
  Object {
    "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(4)/cids(0)@jpeg",
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(3)",
    "displayName": "bobby",
    "handle": "bob.test",
    "viewer": Object {
      "followedBy": "record(4)",
      "following": "record(3)",
    },
  },
]
`;

exports[`pds repost views fetches reposted-by for a reply 1`] = `
Array [
  Object {
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(0)",
    "handle": "eve.test",
    "viewer": Object {},
  },
  Object {
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(1)",
    "handle": "dan.test",
    "viewer": Object {
      "following": "record(0)",
    },
  },
]
`;
